# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./lift-snapshots";
+export * from "./tenant-settings";
 export * from "./tenants";
 export * from "./users";
